<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
       android:background="@drawable/back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/first" />

        <TextView
            style="@style/SetupGuideTitle"
            android:layout_marginTop="90dp"
            android:text="@string/guide1" />
    </LinearLayout>

    <TextView style="@style/SetGuideUnderline" />

    <TextView
        style="@style/SetupGuideContent"
        android:layout_marginTop="20dp"
        android:text="@string/guide1_content" />

    <TextView
        style="@style/SetupGuideItem"
        android:text="@string/guide1_item1" />

    <TextView
        style="@style/SetupGuideItem"
        android:text="@string/guide1_item2" />

    <TextView
        style="@style/SetupGuideItem"
        android:text="@string/guide1_item3" />

    <TextView
        style="@style/SetupGuideItem"
        android:text="@string/guide1_item4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_online" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:src="@android:drawable/presence_invisible" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/bt_guide_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/next" />
    </RelativeLayout>

</LinearLayout>